<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/menu_cart" />
    </group>

    <item android:title="User">
        <menu>
            <item android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="Logout"
                />
        </menu>
    </item>


    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/nav_share"
                android:title="@string/nav_share" />

            <item android:id="@+id/rate"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/nav_rate" />
        </menu>
    </item>
</menu>